update projects and fix lein java build